--- a/index.html
+++ b/index.html
@@ -1,53 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="cs">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rubik's Cube Solver</title>
+    <title>HEEXY Search</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
-
-<body>
-    <div class="container mx-auto py-8">
-        <div id="rubiks-cube" class="rubiks-cube">
-            <!-- Front Face -->
-            <div class="face front-face">
-                <!-- Cube Squares -->
-                <!-- Example: Add nine divs for a 3x3 face -->
-                <!-- You can use different Tailwind classes for colors -->
-                <!-- Example: bg-red-500, bg-blue-500, bg-yellow-500, etc. -->
-                <!-- Add appropriate classes to style these divs -->
-            </div>
-            <!-- Back Face -->
-            <div class="face back-face">
-                <!-- Cube Squares -->
-            </div>
-            <!-- Top Face -->
-            <div class="face top-face">
-                <!-- Cube Squares -->
-            </div>
-            <!-- Bottom Face -->
-            <div class="face bottom-face">
-                <!-- Cube Squares -->
-            </div>
-            <!-- Left Face -->
-            <div class="face left-face">
-                <!-- Cube Squares -->
-            </div>
-            <!-- Right Face -->
-            <div class="face right-face">
-                <!-- Cube Squares -->
+<body class="bg-gray-100 flex flex-col items-center min-h-screen">
+    <header class="w-full flex justify-between p-4 bg-white shadow-md">
+        <div class="flex items-center space-x-4">
+            <a href="#" class="text-gray-700 hover:text-gray-900">
+                <i class="fas fa-user-circle fa-2x"></i>
+            </a>
+            <a href="#" class="text-gray-700 hover:text-gray-900">
+                <i class="fas fa-cog fa-2x"></i>
+            </a>
+        </div>
+        <div class="relative">
+            <button id="dropdownButton" class="flex items-center text-gray-700 hover:text-gray-900 focus:outline-none">
+                <i class="fas fa-th fa-2x"></i>
+            </button>
+            <div id="dropdownMenu" class="hidden absolute right-0 mt-2 w-48 bg-white border border-gray-200 rounded-lg shadow-lg">
+                <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Mapy</a>
+                <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Překladač</a>
+                <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Další služby</a>
             </div>
         </div>
-
-        <button id="solve-button" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mt-4">
-            Solve Cube
-        </button>
-    </div>
-
-    <script src="main.js"></script>
+    </header>
+    <main class="flex flex-col items-center justify-center flex-grow w-full pt-32">
+        <h1 class="text-8xl font-bold text-gray-800 mb-8">HEEXY</h1>
+        <form action="https://heexy.org/search" method="GET" class="w-full max-w-sm mx-auto">
+            <div class="relative">
+                <input name="q" class="appearance-none bg-white border border-gray-300 rounded-lg w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent shadow-sm text-lg" style="border-radius: 0.45rem;" type="text" placeholder="Hledat..." aria-label="Search">
+                <button class="absolute right-0 top-0 mt-2 mr-3" type="submit">
+                    <svg class="h-5 w-5 text-gray-500 hover:text-gray-700" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-4.35-4.35M15.75 10.5a5.25 5.25 0 11-10.5 0 5.25 5.25 0 0110.5 0z" />
+                    </svg>
+                </button>
+            </div>
+        </form>
+    </main>
+    <footer class="w-full py-4 text-center text-gray-600 bg-white border-t border-gray-200">
+        © 2024 HEEXY. Všechna práva vyhrazena.
+    </footer>
+    <script>
+        document.getElementById('dropdownButton').addEventListener('click', function() {
+            var menu = document.getElementById('dropdownMenu');
+            menu.classList.toggle('hidden');
+        });
+        window.addEventListener('click', function(e) {
+            if (!document.getElementById('dropdownButton').contains(e.target)) {
+                document.getElementById('dropdownMenu').classList.add('hidden');
+            }
+        });
+    </script>
 </body>
-
 </html>
