--- a/login.html
+++ b/login.html
@@ -6,9 +6,21 @@
     <title>HEEXY Login</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <style>
+        .bg-cover {
+            background-image: url('https://source.unsplash.com/random/1920x1080');
+            filter: blur(10px);
+        }
+    </style>
+    <meta property="og:title" content="HEEXY Login">
+    <meta property="og:description" content="Přihlašte se ke svému účtu na HEEXY.">
+    <meta property="og:image" content="https://source.unsplash.com/random/1200x630">
+    <meta property="og:url" content="https://heexy.org/login">
+    <meta property="og:type" content="website">
 </head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen">
-    <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-md">
+<body class="relative min-h-screen flex flex-col justify-center items-center bg-cover bg-center bg-no-repeat">
+    <div class="absolute inset-0 bg-black opacity-50"></div>
+    <div class="relative bg-white p-8 rounded-lg shadow-lg w-full max-w-md">
         <div class="flex justify-center mb-8">
             <h1 class="text-4xl font-bold text-gray-800">HEEXY</h1>
         </div>
@@ -38,5 +50,8 @@
             <p class="text-sm text-gray-600">Don't have an account? <a href="#" class="font-medium text-blue-600 hover:text-blue-500">Sign up</a></p>
         </div>
     </div>
+    <footer class="w-full py-4 text-center text-gray-600 bg-white border-t border-gray-200 mt-8">
+        © 2024 HEEXY. Všechna práva vyhrazena.
+    </footer>
 </body>
 </html>
