--- a/login.html
+++ b/login.html
@@ -7,19 +7,19 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <style>
-        .bg-cover {
-            background-image: url('https://source.unsplash.com/random/1920x1080');
+        .bg-image {
+            background-image: url('https://source.unsplash.com/1920x1080/?nature');
             filter: blur(10px);
         }
     </style>
     <meta property="og:title" content="HEEXY Login">
     <meta property="og:description" content="Přihlašte se ke svému účtu na HEEXY.">
-    <meta property="og:image" content="https://source.unsplash.com/random/1200x630">
+    <meta property="og:image" content="https://source.unsplash.com/1200x630/?nature">
     <meta property="og:url" content="https://heexy.org/login">
     <meta property="og:type" content="website">
 </head>
-<body class="relative min-h-screen flex flex-col justify-center items-center bg-cover bg-center bg-no-repeat">
-    <div class="absolute inset-0 bg-black opacity-50"></div>
+<body class="relative min-h-screen flex flex-col justify-center items-center bg-gray-100">
+    <div class="absolute inset-0 bg-image bg-cover bg-center"></div>
     <div class="relative bg-white p-8 rounded-lg shadow-lg w-full max-w-md">
         <div class="flex justify-center mb-8">
             <h1 class="text-4xl font-bold text-gray-800">HEEXY</h1>
