--- a/login.html
+++ b/login.html
@@ -15,10 +15,14 @@
             background-size: cover;
             background-position: center;
         }
+        .glass-effect {
+            background-color: rgba(255, 255, 255, 0.8);
+            backdrop-filter: blur(10px);
+        }
     </style>
 </head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen bg-image">
-    <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-md">
+<body class="bg-gray-100 flex flex-col items-center justify-between min-h-screen bg-image">
+    <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-md glass-effect">
         <div class="flex justify-center mb-8">
             <h1 class="text-4xl font-bold text-gray-800">HEEXY</h1>
         </div>
@@ -48,7 +52,7 @@
             <p class="text-sm text-gray-600">Don't have an account? <a href="#" class="font-medium text-blue-600 hover:text-blue-500">Sign up</a></p>
         </div>
     </div>
-    <footer class="absolute bottom-0 w-full py-4 text-center text-gray-600 bg-white border-t border-gray-200">
+    <footer class="w-full py-4 text-center text-gray-600 bg-white border-t border-gray-200">
         © 2024 HEEXY. All rights reserved.
     </footer>
 </body>
