--- a/login.html
+++ b/login.html
@@ -16,12 +16,13 @@
             background-position: center;
         }
         .glass-effect {
-            background-color: rgba(255, 255, 255, 0.8);
+            background-color: rgba(255, 255, 255, 0.6);
             backdrop-filter: blur(10px);
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
         }
     </style>
 </head>
-<body class="bg-gray-100 flex flex-col items-center justify-between min-h-screen bg-image">
+<body class="bg-gray-100 flex flex-col items-center justify-center min-h-screen bg-image">
     <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-md glass-effect">
         <div class="flex justify-center mb-8">
             <h1 class="text-4xl font-bold text-gray-800">HEEXY</h1>
