--- a/login.html
+++ b/login.html
@@ -18,11 +18,11 @@
         .glass-effect {
             background-color: rgba(255, 255, 255, 0.6);
             backdrop-filter: blur(10px);
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 -4px 6px -1px rgba(0, 0, 0, 0.1);
         }
     </style>
 </head>
-<body class="bg-gray-100 flex flex-col items-center justify-center min-h-screen bg-image">
+<body class="bg-gray-100 flex flex-col items-center justify-between min-h-screen bg-image">
     <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-md glass-effect">
         <div class="flex justify-center mb-8">
             <h1 class="text-4xl font-bold text-gray-800">HEEXY</h1>
@@ -53,7 +53,7 @@
             <p class="text-sm text-gray-600">Don't have an account? <a href="#" class="font-medium text-blue-600 hover:text-blue-500">Sign up</a></p>
         </div>
     </div>
-    <footer class="w-full py-4 text-center text-gray-600 bg-white border-t border-gray-200">
+    <footer class="absolute bottom-0 w-full py-4 text-center text-gray-600 bg-white border-t border-gray-200 glass-effect">
         © 2024 HEEXY. All rights reserved.
     </footer>
 </body>
