--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <title>HEEXY Login</title>
     <meta property="og:title" content="HEEXY Login">
     <meta property="og:description" content="Log in to HEEXY account">
-    <meta property="og:image" content="https://example.com/image.jpg">
+    <meta property="og:image" content="https://source.unsplash.com/random">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <style>
@@ -14,15 +14,16 @@
             background-image: url('https://source.unsplash.com/random');
             background-size: cover;
             background-position: center;
+            filter: blur(2px);
         }
         .glass-effect {
             background-color: rgba(255, 255, 255, 0.6);
             backdrop-filter: blur(10px);
-            box-shadow: 0 -4px 6px -1px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
         }
     </style>
 </head>
-<body class="bg-gray-100 flex flex-col items-center justify-between min-h-screen bg-image">
+<body class="bg-gray-100 flex items-center justify-center min-h-screen bg-image">
     <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-md glass-effect">
         <div class="flex justify-center mb-8">
             <h1 class="text-4xl font-bold text-gray-800">HEEXY</h1>
@@ -53,8 +54,5 @@
             <p class="text-sm text-gray-600">Don't have an account? <a href="#" class="font-medium text-blue-600 hover:text-blue-500">Sign up</a></p>
         </div>
     </div>
-    <footer class="absolute bottom-0 w-full py-4 text-center text-gray-600 bg-white border-t border-gray-200 glass-effect">
-        © 2024 HEEXY. All rights reserved.
-    </footer>
 </body>
 </html>
