--- a/clientarea.html
+++ b/clientarea.html
@@ -17,34 +17,52 @@
     .sidebar a:hover {
       background-color: #2c2c2e;
     }
+    .sidebar.hidden {
+      display: none;
+    }
   </style>
 </head>
 <body class="font-sans antialiased">
 
   <div class="flex h-screen">
+    <!-- Mobile Menu Button -->
+    <div class="md:hidden p-4">
+      <button id="menuButton" class="text-white focus:outline-none">
+        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path></svg>
+      </button>
+    </div>
+
     <!-- Sidebar -->
-    <div class="sidebar w-64 py-4 px-2 flex flex-col">
+    <div id="sidebar" class="sidebar w-64 py-4 px-2 flex flex-col md:block hidden">
       <div class="text-center mb-6">
         <h1 class="text-2xl font-bold">Heexy</h1>
       </div>
       <nav class="flex-grow">
-        <a href="#" class="flex items-center py-2 px-3 rounded hover:bg-gray-700 transition-colors">
+        <a href="#" class="menu-item flex items-center py-2 px-3 rounded hover:bg-gray-700 transition-colors" data-section="dashboard">
           <svg class="w-6 h-6 mr-3 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>
           Dashboard
         </a>
-        <a href="#" class="flex items-center py-2 px-3 rounded hover:bg-gray-700 transition-colors">
+        <a href="#" class="menu-item flex items-center py-2 px-3 rounded hover:bg-gray-700 transition-colors" data-section="account-settings">
           <svg class="w-6 h-6 mr-3 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 7h18M3 12h18m-9 5h9"></path></svg>
           Account Settings
         </a>
-        <a href="#" class="flex items-center py-2 px-3 rounded hover:bg-gray-700 transition-colors">
+        <a href="#" class="menu-item flex items-center py-2 px-3 rounded hover:bg-gray-700 transition-colors" data-section="notifications">
           <svg class="w-6 h-6 mr-3 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 8h10M7 12h4m1 8h-2a3 3 0 01-3-3V5a3 3 0 013-3h2a3 3 0 013 3v10a3 3 0 01-3 3z"></path></svg>
           Notifications
         </a>
-        <a href="#" class="flex items-center py-2 px-3 rounded hover:bg-gray-700 transition-colors">
+        <a href="#" class="menu-item flex items-center py-2 px-3 rounded hover:bg-gray-700 transition-colors" data-section="activity-log">
           <svg class="w-6 h-6 mr-3 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6 1a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
           Activity Log
         </a>
-        <a href="#" class="flex items-center py-2 px-3 rounded hover:bg-gray-700 transition-colors">
+        <a href="#" class="menu-item flex items-center py-2 px-3 rounded hover:bg-gray-700 transition-colors" data-section="security">
+          <svg class="w-6 h-6 mr-3 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.575V11a7.003 7.003 0 00-4-6.326V4a2 2 0 10-4 0v.674A7.003 7.003 0 006 11v3.575c0 .538-.214 1.055-.595 1.45L4 17h11z"></path></svg>
+          Security
+        </a>
+        <a href="#" class="menu-item flex items-center py-2 px-3 rounded hover:bg-gray-700 transition-colors" data-section="integration">
+          <svg class="w-6 h-6 mr-3 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 3v4a1 1 0 001 1h3m10 10v4a1 1 0 01-1 1h-3m-4-14h6M9 21h6m-6-10h6M9 10h6"></path></svg>
+          Integration
+        </a>
+        <a href="#" class="menu-item flex items-center py-2 px-3 rounded hover:bg-gray-700 transition-colors" data-section="logout">
           <svg class="w-6 h-6 mr-3 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg>
           Logout
         </a>
@@ -53,10 +71,68 @@
 
     <!-- Main Content -->
     <div class="flex-1 p-6">
-      <h2 class="text-3xl font-bold mb-4">Welcome to Heexy</h2>
-      <p>This is your client account area. Use the menu on the left to navigate through different sections.</p>
+      <h2 id="sectionTitle" class="text-3xl font-bold mb-4">Welcome to Heexy</h2>
+      <div id="sectionContent">
+        <p>This is your client account area. Use the menu on the left to navigate through different sections.</p>
+      </div>
     </div>
   </div>
+
+  <script>
+    document.getElementById('menuButton').addEventListener('click', function() {
+      const sidebar = document.getElementById('sidebar');
+      sidebar.classList.toggle('hidden');
+    });
+
+    const menuItems = document.querySelectorAll('.menu-item');
+    const sectionTitle = document.getElementById('sectionTitle');
+    const sectionContent = document.getElementById('sectionContent');
+
+    menuItems.forEach(item => {
+      item.addEventListener('click', (e) => {
+        e.preventDefault();
+        const section = item.getAttribute('data-section');
+        loadSection(section);
+      });
+    });
+
+    function loadSection(section) {
+      switch (section) {
+        case 'dashboard':
+          sectionTitle.innerText = 'Dashboard';
+          sectionContent.innerHTML = '<p>Here you can find an overview of your account activity, recent notifications, and quick access to settings.</p>';
+          break;
+        case 'account-settings':
+          sectionTitle.innerText = 'Account Settings';
+          sectionContent.innerHTML = '<p>Manage your account settings here.</p>';
+          break;
+        case 'notifications':
+          sectionTitle.innerText = 'Notifications';
+          sectionContent.innerHTML = '<p>View your recent notifications here.</p>';
+          break;
+        case 'activity-log':
+          sectionTitle.innerText = 'Activity Log';
+          sectionContent.innerHTML = '<p>Check your activity log here.</p>';
+          break;
+        case 'security':
+          sectionTitle.innerText = 'Security';
+          sectionContent.innerHTML = '<p>Manage your security settings here.</p>';
+          break;
+        case 'integration':
+          sectionTitle.innerText = 'Integration';
+          sectionContent.innerHTML = '<p>Manage your integrations here.</p>';
+          break;
+        case 'logout':
+          sectionTitle.innerText = 'Logout';
+          sectionContent.innerHTML = '<p>You have been logged out.</p>';
+          break;
+        default:
+          sectionTitle.innerText = 'Welcome to Heexy';
+          sectionContent.innerHTML = '<p>This is your client account area. Use the menu on the left to navigate through different sections.</p>';
+          break;
+      }
+    }
+  </script>
 
 </body>
 </html>
